<resources>
    <string name="app_name">KartingSheets</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Index_Udef">udef</string>
    <string name="Time_Def">some time set</string>
    <string name="Dif_Def">some dif</string>
    <string name="index">Index</string>
    <string name="time">Time</string>
    <string name="dif_to_last_lap">dif to last lap</string>
    <string name="dif_to_best">dif to best</string>

    <!-- NavBar Text -->

    <string name="nav_share_button">Compare</string>
    <string name="nav_add_button">Add</string>

    <!-- Stats Text -->

    <string name="stats_best_lap">Best lap</string>
    <string name="stats_average_lap">Average lap time</string>
    <string name="stats_consistency">Consistency</string>
    <string name="stats_favourite_kart">Favourite Kart</string>
    <string name="stats_favourite_track">Favourite Track</string>

    <!-- Time Sheets -->
    <string name="times_sheets_date">Date</string>
    <string name="times_sheets_best_lap">Best lap</string>
    <string name="times_sheets_average_lap">Average lap</string>
    <string name="times_sheets_consistency">Consistency</string>
    <string name="time_sheets_lap">Lap</string>
    <string name="time_sheets_time">Time</string>
    <string name="time_sheets_last_delta">Last lap delta</string>
    <string name="time_sheets_best_delta">Best lap delta</string>
    <string name="time_sheets_kart">Kart</string>
    <string name="time_sheets_karting_center">Karting Center</string>
    <string name="time_sheets_delete_button">Delete</string>
    <string name="time_sheet_edit_button">Edit</string>

    <!-- Add Activity -->
    <string name="add_activity_header">Add Time Sheet</string>
    <string name="add_activity_Back">Back</string>
    <string name="add_pick_time_date">Set date and time</string>
    <string name="add_pick_kart">Chose a Kart</string>
    <string name="add_confirm">Ok</string>
    <string name="add_pick_kart_center">Chose a karting center</string>
    <string name="add_list_remove">Remove</string>
    <string name="add_list_add">Add Lap +</string>
    <string name="add_list_title">Laps:</string>
    <string name="add_chose_fragment_add_kart">Add Kart +</string>
    <string name="add_add_kart_number">Kart Number</string>
    <string name="add_add_kart_displacement">Kart Displacement (cc)</string>
    <string name="add_add_kart_name">Kart Name (optional)</string>

    <!-- Defaults -->
    <string name="default_lap">0:00.000</string>
    <string name="default_consistency">000/100%</string>
    <string name="default_kart"> 000cc-n00 </string>
    <string name="default_track"> Some Karting Center </string>
    <string name="default_date"> TUS-21-Oct-2020 </string>
    <string name="default_lap_number">-1</string>
    <string name="default_delta">+0.000</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="default_kart_unknown">Unknown</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>