<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/stats_fragment_body"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="1dp"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="10dp"
    android:background="@color/stats_background_color"
    android:stretchColumns="0,1">

    <!-- Best Lap -->
    <TableRow
        android:id="@+id/stats_best_lap_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/stats_fragment_table_shape"

            android:text="@string/stats_best_lap"
            android:textColor="@color/white"
            android:gravity="center"
            android:padding="2dp"/>

        <TextView
            android:id="@+id/stats_best_lap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/stats_fragment_table_shape"

            android:text="@string/default_lap"
            android:textColor="@color/white"
            android:gravity="center"
            android:padding="2dp"/>
    </TableRow>

    <!-- Average Lap -->
    <TableRow
        android:id="@+id/stats_average_lap_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/stats_fragment_table_shape"

            android:text="@string/stats_average_lap"
            android:textColor="@color/white"
            android:gravity="center"
            android:padding="2dp"
            />

        <TextView
            android:id="@+id/stats_average_lap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/stats_fragment_table_shape"

            android:text="@string/default_lap"
            android:textColor="@color/white"
            android:gravity="center"
            android:padding="2dp"/>

    </TableRow>

    <!-- Consistency -->
    <TableRow
        android:id="@+id/stats_consistency_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/stats_fragment_table_shape"

            android:text="@string/stats_consistency"
            android:textColor="@color/white"
            android:gravity="center"
            android:padding="2dp"
            />

        <TextView
            android:id="@+id/stats_consistency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/stats_fragment_table_shape"

            android:text="@string/default_consistency"
            android:textColor="@color/white"
            android:gravity="center"
            android:padding="2dp"/>

    </TableRow>

    <!-- Favourite Kart -->
    <TableRow
        android:id="@+id/stats_favourite_kart_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/stats_fragment_table_shape"

            android:text="@string/stats_favourite_kart"
            android:textColor="@color/white"
            android:gravity="center"
            android:padding="2dp"
            />

        <TextView
            android:id="@+id/stats_favourite_kart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/stats_fragment_table_shape"

            android:text="@string/default_kart"
            android:textColor="@color/white"
            android:gravity="center"
            android:padding="2dp"/>

    </TableRow>

    <!-- Favourite Kart -->
    <TableRow
        android:id="@+id/stats_favourite_track_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/stats_fragment_table_shape"

            android:text="@string/stats_favourite_track"
            android:textColor="@color/white"
            android:gravity="center"
            android:padding="2dp"
            />

        <TextView
            android:id="@+id/stats_favourite_karting_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/stats_fragment_table_shape"

            android:text="@string/default_track"
            android:textColor="@color/white"
            android:gravity="center"
            android:padding="2dp"/>

    </TableRow>

</TableLayout>