<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/time_sheet"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/table_fragment_table_shape"
    android:orientation="vertical"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="10dp"
    android:padding="1dp">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@drawable/table_fragment_table_shape"
        android:stretchColumns="0,1">

        <!-- Date Lap -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_fragment_table_shape"

                android:text="@string/time_sheet_date"
                android:textColor="@color/white"
                android:gravity="center"
                android:padding="2dp" />

            <TextView
                android:id="@+id/time_sheets_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_fragment_table_shape"

                android:text="@string/default_date"
                android:textColor="@color/white"
                android:gravity="center"
                android:padding="2dp" />
        </TableRow>

        <!-- Karting Center -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_fragment_table_shape"

                android:text="@string/time_sheets_karting_center"
                android:textColor="@color/white"
                android:gravity="center"
                android:padding="2dp"
                />

            <TextView
                android:id="@+id/time_sheet_karting_center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_fragment_table_shape"

                android:text="@string/default_track"
                android:textColor="@color/white"
                android:gravity="center"
                android:padding="2dp"/>

        </TableRow>

        <!-- Kart -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_fragment_table_shape"

                android:text="@string/time_sheets_kart"
                android:textColor="@color/white"
                android:gravity="center"
                android:padding="2dp"
                />

            <TextView
                android:id="@+id/time_sheet_kart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_fragment_table_shape"

                android:text="@string/default_kart"
                android:textColor="@color/white"
                android:gravity="center"
                android:padding="2dp"/>

        </TableRow>

        <!-- Best Lap -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_fragment_table_shape"

                android:text="@string/stats_best_lap"
                android:textColor="@color/white"
                android:gravity="center"
                android:padding="2dp"/>

            <TextView
                android:id="@+id/time_sheet_best_lap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_fragment_table_shape"

                android:text="@string/default_lap"
                android:textColor="@color/white"
                android:gravity="center"
                android:padding="2dp"/>
        </TableRow>

        <!-- Worst Lap -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_fragment_table_shape"

                android:text="@string/time_sheet_worst_lap"
                android:textColor="@color/white"
                android:gravity="center"
                android:padding="2dp"/>

            <TextView
                android:id="@+id/time_sheet_worst_lap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_fragment_table_shape"

                android:text="@string/default_lap"
                android:textColor="@color/white"
                android:gravity="center"
                android:padding="2dp"/>
        </TableRow>

        <!-- Average Lap -->
        <TableRow
            android:id="@+id/stats_average_lap_body"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_fragment_table_shape"

                android:text="@string/time_sheet_average_lap"
                android:textColor="@color/white"
                android:gravity="center"
                android:padding="2dp"
                />

            <TextView
                android:id="@+id/time_sheet_average_lap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_fragment_table_shape"

                android:text="@string/default_lap"
                android:textColor="@color/white"
                android:gravity="center"
                android:padding="2dp"/>

        </TableRow>

        <!-- Consistency -->
        <TableRow
            android:id="@+id/stats_consistency_body"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_fragment_table_shape"

                android:text="@string/stats_consistency"
                android:textColor="@color/white"
                android:gravity="center"
                android:padding="2dp"
                />

            <TextView
                android:id="@+id/time_sheet_consistency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_fragment_table_shape"

                android:text="@string/default_consistency"
                android:textColor="@color/white"
                android:gravity="center"
                android:padding="2dp"/>

        </TableRow>


    </TableLayout>


    <!-- Times -->
    <TableLayout
        android:id="@+id/time_sheet_lap_placeholder"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@drawable/table_fragment_table_shape"
        android:stretchColumns="0,1,2,3">

        <TableRow
            android:id="@+id/times_sheet_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_fragment_table_shape"

                android:text="@string/time_sheets_lap"
                android:textColor="@color/white"
                android:gravity="center"
                android:padding="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_fragment_table_shape"

                android:text="@string/time_sheets_time"
                android:textColor="@color/white"
                android:gravity="center"
                android:padding="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_fragment_table_shape"

                android:text="@string/time_sheets_best_delta"
                android:textColor="@color/white"
                android:gravity="center"
                android:padding="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_fragment_table_shape"

                android:text="@string/time_sheets_last_delta"
                android:textColor="@color/white"
                android:gravity="center"
                android:padding="2dp"/>

        </TableRow>

    </TableLayout>

</LinearLayout>