<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".add_activity.ChoseKartFragment"
    android:layout_gravity="center"
    android:clickable="true">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="500dp"
        android:layout_gravity="center"
        android:background="@drawable/popup_background">

        <!-- Picker -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="417dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="3dp">

            <LinearLayout
                android:id="@+id/choose_kart_karts_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="3dp">

                <TextView
                    android:id="@+id/add_add_kart_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_chose_fragment_add_kart"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:background="@drawable/popup_item_background"
                    android:paddingVertical="10dp"/>

            </LinearLayout>

        </ScrollView>

        <!-- Nav Bar -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/gray_600"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            >

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/choose_kart_back_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/nav_buttons_shape"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/choose_kart_confirm_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/add_activity_Back"
                android:textAllCaps="false"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/choose_kart_confirm_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/nav_buttons_shape"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/choose_kart_back_button"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/add_confirm"
                android:textAllCaps="false"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>